fixed whitespace issue, added transitions, fixed fonts, modified dialog window styling

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -2,10 +2,10 @@ body {
 	background-color: #000;
 	margin: 0px;
 	overflow: hidden;
-	/*font-family: 'Droid Serif', serif;*/
+	font-family: 'Droid Serif', serif;
 }
 
-#closeDialog {
+.closeDialog {
 	float: right;
 	vertical-align: middle;
 	font-family: Arial, Tahoma, Verdana, sans-serif;
@@ -19,7 +19,7 @@ body {
 	-ms-filter:"progid:DXImageTransform.Microsoft.Alpha"(Opacity=70);
 }
 
-#closeDialog:hover {
+.closeDialog:hover {
 	-moz-opacity: 1;
 	opacity: 1;
 	-ms-filter:"progid:DXImageTransform.Microsoft.Alpha"(Opacity=100);
@@ -27,15 +27,22 @@ body {
 }
 
 .object-label {
-	background: #666;
 	color: #fff;
 	display: none;
 	padding: 5px;
 	font-size: small;
 	border-radius: 2px;
-	-moz-opacity: 0.70;
-	opacity: 0.70;
-	-ms-filter:"progid:DXImageTransform.Microsoft.Alpha"(Opacity=70);
+	cursor: pointer;
+	-moz-opacity: 0.50;
+	opacity: 0.50;
+	display: none;
+	-ms-filter:"progid:DXImageTransform.Microsoft.Alpha"(Opacity=50);
+}
+
+.object-label:hover, #controls:hover, #scales:hover {
+	-moz-opacity: 1;
+	opacity: 1;
+	-ms-filter:"progid:DXImageTransform.Microsoft.Alpha"(Opacity=100);
 }
 
 #controls {
@@ -44,6 +51,14 @@ body {
 	left:0px;
 	padding: 20px;
 	width: 20px;
+	-moz-opacity: 0.30;
+	opacity: 0.30;
+	-ms-filter:"progid:DXImageTransform.Microsoft.Alpha"(Opacity=30);
+	-webkit-transition: opacity 0.5s ease-in-out;
+	-moz-transition: opacity 0.5s ease-in-out;
+	-ms-transition: opacity 0.5s ease-in-out;
+	-o-transition: opacity 0.5s ease-in-out;
+	transition: opacity 0.5s ease-in-out;
 }
 
 #soundToggle, #helpToggle {
@@ -52,6 +67,15 @@ body {
 	height: 32px;
 	background: #fff;
 	margin-left: -50%;
+}
+
+#tourLink div {
+	display: inline-block;
+	vertical-align: middle;
+	width: 32px;
+	height: 32px;
+	margin-right: 5px;
+	background: #fff;
 }
 
 #soundToggle { margin-top: 20px; }
@@ -75,10 +99,8 @@ body {
 	right: 0px;
 	padding: 15px;
 	text-align: right;
-	background: #808080;
+	text-shadow: 0px 0px 8px rgba(255, 255, 255, 1);
 }
-
-canvas { border: 1px solid #fff; }
 
 #julianDateTime {
 	color: #fff;
@@ -88,6 +110,8 @@ canvas { border: 1px solid #fff; }
 #tourLink {
 	color: #fff;
 	font-size: medium;
+	font-style: italic;
+	margin-top: 5px;
 }
 
 #scales {
@@ -98,6 +122,15 @@ canvas { border: 1px solid #fff; }
 	padding: 20px;
 	height: 20px;
 	z-index: 1001;
+	-moz-opacity: 0.30;
+	opacity: 0.30;
+	-ms-filter:"progid:DXImageTransform.Microsoft.Alpha"(Opacity=30);
+	-webkit-transition: opacity 0.5s ease-in-out;
+	-moz-transition: opacity 0.5s ease-in-out;
+	-ms-transition: opacity 0.5s ease-in-out;
+	-o-transition: opacity 0.5s ease-in-out;
+	transition: opacity 0.5s ease-in-out;
+	text-shadow: 0px 0px 4px rgba(255, 255, 255, 1);
 }
 
 #planetScale, #speedScale {
@@ -105,13 +138,19 @@ canvas { border: 1px solid #fff; }
 	margin-top: -10px;
 }
 
-#dialogUnderlay {
+.dialogUnderlay {
 	display: none;
 	-moz-opacity: 0.5;
 	opacity: 0.5;
 	-ms-filter:"progid:DXImageTransform.Microsoft.Alpha"(Opacity=50);
 	text-shadow: 0px 0px 12px rgba(255, 255, 255, 0.5);
-	background: #000;
+	-webkit-box-shadow: 0px 0px 30px 0px rgba(255, 255, 255, 0.77);
+	-moz-box-shadow:    0px 0px 30px 0px rgba(255, 255, 255, 0.77);
+	box-shadow:         0px 0px 30px 0px rgba(255, 255, 255, 0.77);
+	border-radius: 7px;
+	-webkit-border-radius: 7px;
+	-moz-border-radius: 7px;
+	background-color: #000;
 	width: 600px;
 	height: 700px;
 	position: absolute;
@@ -123,7 +162,7 @@ canvas { border: 1px solid #fff; }
 	z-index: 1001;
 }
 
-#dialogWindow {
+.dialogWindow {
 	display: none;
 	width: 600px;
 	height: 700px;
@@ -134,9 +173,6 @@ canvas { border: 1px solid #fff; }
 	width: 25%;
 	height: 70%;
 	color: #fff;
-	-webkit-box-shadow: 0px 0px 30px 0px rgba(255, 255, 255, 0.77);
-	-moz-box-shadow:    0px 0px 30px 0px rgba(255, 255, 255, 0.77);
-	box-shadow:         0px 0px 30px 0px rgba(255, 255, 255, 0.77);
 	border-radius: 7px;
 	-webkit-border-radius: 7px;
 	-moz-border-radius: 7px;
@@ -152,4 +188,20 @@ canvas { border: 1px solid #fff; }
 	font-size: xx-large;
 	text-shadow: 0px 0px 8px rgba(255, 255, 255, 1);
 	padding: 5px;
+}
+
+#objTitle {
+	margin: auto;
+	text-align: center;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	border: 0px;
+	margin-top: 1%;
+	cursor: pointer;
+}
+
+#objTitle:hover {
+	text-shadow: 0px 0px 29px rgba(255, 255, 255, 1);
 }
